--- a/views/master/events/screeningEvent/add.ejs
+++ b/views/master/events/screeningEvent/add.ejs
@@ -1,21 +1,26 @@
 <div class="modal fade" id="newModal" tabindex="-1">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-				<h4 class="modal-title">パフォーマンス新規登録</h4>
-			</div>
-			<div class="modal-body">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+                <h4 class="modal-title">パフォーマンス新規登録</h4>
+            </div>
+            <div class="modal-body">
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="screeningEventIdentifier">劇場作品コード</label>
+                            <label class="col-sm-3 control-label" for="screeningEventIdentifier">作品コード</label>
                             <div class="col-sm-9 form-inline">
-                                <input type="text" maxlength="6" class="form-control" name="screeningEventIdentifier" placeholder="劇場作品コード">
+                                <input type="text" maxlength="6" class="form-control" name="screeningEventIdentifier" placeholder="作品コード">
                                 <button type="button" class="btn btn-default film-search-button">検索</button>
                             </div>
                         </div>
-                        <h3 class="film-name" data-screeningEventId="">作品未選択</h3>
+                        <div class="form-group">
+                            <div class="col-sm-9 form-inline">
+                                <select class="form-control" name="screeningEventSeriesId">
+                                </select>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-primary film-select-button">作品を確定</button>
                     </form>
                 </div>
@@ -29,17 +34,21 @@
                             <label class="col-sm-3 control-label" for="doorTime">開場時間</label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="doorTimeHour">
-                                <% for (let i = 0; i < 24; i++) { %>
-                                <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>"><%= hour %></option>
-                                <% } %>
+                                    <% for (let i = 0; i < 24; i++) { %>
+                                        <% let hour = ('00' + String(i)).slice(-2); %>
+                                            <option value="<%= hour %>">
+                                                <%= hour %>
+                                            </option>
+                                            <% } %>
                                 </select>
                                 時
                                 <select class="form-control" name="doorTimeMinutes">
-                                <% for (let i = 0; i < 60; i++) { %>
-                                <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>"><%= minutes %></option>
-                                <% } %>
+                                    <% for (let i = 0; i < 60; i++) { %>
+                                        <% let minutes = ('00' + String(i)).slice(-2); %>
+                                            <option value="<%= minutes %>">
+                                                <%= minutes %>
+                                            </option>
+                                            <% } %>
                                 </select>
                                 分
                             </div>
@@ -48,17 +57,21 @@
                             <label class="col-sm-3 control-label" for="startTime">開始時間</label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="startTimeHour">
-                                <% for (let i = 0; i < 24; i++) { %>
-                                <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>"><%= hour %></option>
-                                <% } %>
+                                    <% for (let i = 0; i < 24; i++) { %>
+                                        <% let hour = ('00' + String(i)).slice(-2); %>
+                                            <option value="<%= hour %>">
+                                                <%= hour %>
+                                            </option>
+                                            <% } %>
                                 </select>
                                 時
                                 <select class="form-control" name="startTimeMinutes">
-                                <% for (let i = 0; i < 60; i++) { %>
-                                <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>"><%= minutes %></option>
-                                <% } %>
+                                    <% for (let i = 0; i < 60; i++) { %>
+                                        <% let minutes = ('00' + String(i)).slice(-2); %>
+                                            <option value="<%= minutes %>">
+                                                <%= minutes %>
+                                            </option>
+                                            <% } %>
                                 </select>
                                 分
                             </div>
@@ -67,17 +80,21 @@
                             <label class="col-sm-3 control-label" for="endTime">終了時間</label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="endTimeHour">
-                                <% for (let i = 0; i < 24; i++) { %>
-                                <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>"><%= hour %></option>
-                                <% } %>
+                                    <% for (let i = 0; i < 24; i++) { %>
+                                        <% let hour = ('00' + String(i)).slice(-2); %>
+                                            <option value="<%= hour %>">
+                                                <%= hour %>
+                                            </option>
+                                            <% } %>
                                 </select>
                                 時
                                 <select class="form-control" name="endTimeMinutes">
-                                <% for (let i = 0; i < 60; i++) { %>
-                                <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>"><%= minutes %></option>
-                                <% } %>
+                                    <% for (let i = 0; i < 60; i++) { %>
+                                        <% let minutes = ('00' + String(i)).slice(-2); %>
+                                            <option value="<%= minutes %>">
+                                                <%= minutes %>
+                                            </option>
+                                            <% } %>
                                 </select>
                                 分
                             </div>
@@ -96,14 +113,14 @@
                         </div>
                     </form>
                 </div>
-			</div>
+            </div>
             <input type="hidden" name="screeningEventId" value="">
             <input type="hidden" name="theater" value="">
             <input type="hidden" name="day" value="">
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
-				<button type="button" class="btn btn-primary regist-button">パフォーマンスを登録</button>
-			</div>
-		</div>
-	</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                <button type="button" class="btn btn-primary regist-button">パフォーマンスを登録</button>
+            </div>
+        </div>
+    </div>
 </div>
