--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -17,9 +17,9 @@
                         </ul>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="doorTime">開場時刻</label>
-                                <div class="col-md-8 form-inline">
+                                <div class="col-md-9 form-inline">
                                     <%- include('../../common/part/_timeSelector', {
                                             hourName: 'doorTimeHour',
                                             minuteName: 'doorTimeMinutes'
@@ -29,9 +29,9 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="startTime">開始時刻</label>
-                                <div class="col-md-8 form-inline">
+                                <div class="col-md-9 form-inline">
                                     <%- include('../../common/part/_timeSelector', {
                                             hourName: 'startTimeHour',
                                             minuteName: 'startTimeMinutes'
@@ -41,9 +41,9 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="endTime">終了時刻</label>
-                                <div class="col-md-8 form-inline">
+                                <div class="col-md-9 form-inline">
                                     <%- include('../../common/part/_timeSelector', {
                                             hourName: 'endTimeHour',
                                             minuteName: 'endTimeMinutes'
@@ -53,18 +53,18 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="screen">スクリーン</label>
-                                <div class="col-md-8 ">
+                                <div class="col-md-9">
                                     <select class="form-control" name="screen"></select>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="ticketTypeGroup">券種グループ</label>
-                                <div class="col-md-8 ">
+                                <div class="col-md-9">
                                     <select class="form-control" name="ticketTypeGroup">
                                         <option value="">選択してください</option>
                                         <% for (ticketType of ticketGroups) { %>
@@ -78,9 +78,9 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="saleStartDate">販売開始日</label>
-                                <div class="col-md-8 form-inline">
+                                <div class="col-md-9 form-inline">
                                     <input class="form-control datepicker" name="saleStartDate" placeholder="YYYY/MM/DD"
                                         maxlength=10>
                                     日
@@ -93,9 +93,9 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="onlineDisplayStartDate">オンライン表示開始日</label>
-                                <div class="col-md-8 form-inline">
+                                <div class="col-md-9 form-inline">
                                     <input class="form-control datepicker" name="onlineDisplayStartDate"
                                         placeholder="YYYY/MM/DD" maxlength=10>
                                 </div>
@@ -103,18 +103,18 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="maxSeatNumber">上限枚数</label>
-                                <div class="col-md-8">
+                                <div class="col-md-9">
                                     <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="mvtkExcludeFlg">
                                 </label>
-                                <div class="col-md-8 form-check">
+                                <div class="col-md-9 form-check">
                                     <label class="form-check-label" for="mvtkExcludeFlg">
                                         <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1"
                                             id="mvtkExcludeFlg">
@@ -128,9 +128,9 @@
                         </div>
                         <div class="form-group">
                             <div class="row">
-                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                                 </label>
-                                <div class="col-md-8 form-check">
+                                <div class="col-md-9 form-check">
                                     <input type="hidden" value="1" name="reservedSeatsAvailable">
                                     <label class="form-check-label" for="reservedSeatsAvailable">
                                         <input disabled class="form-check-input" type="checkbox"
@@ -141,6 +141,29 @@
                                             <span class="check"></span>
                                         </span>
                                     </label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">追加特性</label>
+                                <div class="col-md-9 form-check">
+                                    <% for (let i=0; i < 10; i++) { %>
+                                    <div class="row mb-1 px-3">
+                                        <!-- <span class="input-group-addon">Name:Value</span> -->
+                                        <div class="form-group bmd-form-group col-6">
+                                            <!-- <label class="bmd-label-floating">name</label> -->
+                                            <input class="form-control" name="additionalProperty[<%= i %>][name]"
+                                                id="additionalProperty[<%= i %>][name]" maxlength=64 value="">
+                                        </div>
+                                        <div class="form-group bmd-form-group col-6">
+                                            <!-- <label class="bmd-label-floating">value</label> -->
+                                            <input class="form-control" name="additionalProperty[<%= i %>][value]"
+                                                id="additionalProperty[<%= i %>][value]" maxlength=64 value="">
+                                        </div>
+                                    </div>
+                                    <% } %>
                                 </div>
                             </div>
                         </div>
