--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -110,10 +110,9 @@ AT-01
 </div>
 
 <div class="modal fade" id="modal-additionalProperty" tabindex="-1">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
                 <h4 class="modal-title">細目の追加特性</h4>
             </div>
             <div class="modal-body">
