--- a/views/priceSpecifications/form.ejs
+++ b/views/priceSpecifications/form.ejs
@@ -131,17 +131,29 @@
                         <label for="appliesToMovieTicket[serviceType]" class="bmd-label-static">
                             適用決済カード(ムビチケ券種)区分
                         </label>
+                        <div class="input-group">
+                            <select class="form-control" name="appliesToMovieTicket[serviceType]">
+                                <option value="" selected>選択してください</option>
+                                <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
+                                <option value="<%= movieTicketType.codeValue %>"
+                                    <% if (forms.appliesToMovieTicket !== undefined && movieTicketType.codeValue === forms.appliesToMovieTicket.serviceType) { %>
+                                    selected<% } %>>
+                                    <%= movieTicketType.codeValue %> <%= movieTicketType.name.ja %>
+                                </option>
+                                <% }) %>
+                            </select>
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">区分の</span>
+                            </div>
+                        </div>
+                        <div class="input-group">
+                            <select class="form-control" name="appliesToMovieTicket[serviceOutput][typeOf]">
+                                <option value="MovieTicket"
+                                    <% if (forms.appliesToMovieTicket !== undefined && 'MovieTicket' === forms.appliesToMovieTicket.serviceOutput.typeOf) { %>
+                                    selected<% } %>>ムビチケ</option>
+                            </select>
+                        </div>
 
-                        <select class="form-control" name="appliesToMovieTicket[serviceType]">
-                            <option value="" selected>選択してください</option>
-                            <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
-                            <option value="<%= movieTicketType.codeValue %>"
-                                <% if (forms.appliesToMovieTicket !== undefined && movieTicketType.codeValue === forms.appliesToMovieTicket.serviceType) { %>
-                                selected<% } %>>
-                                <%= movieTicketType.codeValue %> <%= movieTicketType.name.ja %>
-                            </option>
-                            <% }) %>
-                        </select>
                         <% if (errors && errors['appliesToMovieTicket.serviceType']) { %>
                         <span class="bmd-help text-danger d-block">
                             <%- errors['appliesToMovieTicket.serviceType'].msg %>
