--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -81,9 +81,17 @@
                             決済方法<span class="text-danger">(決済カード区分で必須)</span>
                         </label>
                         <select class="form-control" name="paymentMethod[typeOf]">
-                            <option value="MovieTicket" <% if (forms.paymentMethod !== undefined
-                            && forms.paymentMethod.typeOf === 'MovieTicket') { %> selected<% } %>>ムビチケ
+                            <option value="">---</option>
+                            <% if (Array.isArray(paymentServices)) { %>
+                            <% paymentServices
+                                .filter((s) => s.typeOf === 'MovieTicket')
+                                .forEach((s) => { %>
+                            <option value="<%= s.serviceOutput.typeOf %>" <% if (forms.paymentMethod !== undefined
+                                    && forms.paymentMethod.typeOf === s.serviceOutput.typeOf ) { %> selected<% } %>>
+                                <%= s.name.ja %>
                             </option>
+                            <% })%>
+                            <% } %>
                         </select>
                         <% if (errors && errors['paymentMethod.typeOf']) { %>
                         <span class="bmd-help text-danger d-block">
